When doing online IMAP filtering of messages that actually do not exist, don't crash. This happens if the sernum of some messages were stored in the "unfiltered" config file. During filtering, the message listing was finished, and those messages were removed from the index, as they were no longer on the server.

BUG: 175584

svn path=/trunk/KDE/kdepim/; revision=967749